2010-07-21  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Anders Carlsson.

        Composited layers don't scroll in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=42771

        Prep work: FrameView::scrollPositionChanged() sounds like a generic "did scroll" bottleneck,
        but this is deceiving. It's only every called on one platform (Mac) when the NSScrollView gets
        scrolled, so rename it to FrameView::scrollPositionChangedViaPlatformWidget().

        * WebCore.exp.in:
        * page/FrameView.cpp:
        (WebCore::FrameView::scrollPositionChangedViaPlatformWidget):
        * page/FrameView.h:

Canonical link: https://commits.webkit.org/54693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63856 268f45cc-cd09-0410-ab3c-d52691b4dbfc